@@ -83,7 +83,7 @@ struct SPVM_env {
   void* (*new_double_array_raw)(SPVM_ENV*, int32_t);
   void* (*new_object_array_raw)(SPVM_ENV*, int32_t, int32_t);
   void* (*new_multi_array_raw)(SPVM_ENV*, int32_t, int32_t, int32_t);
-  void* (*new_value_t_array_raw)(SPVM_ENV*, int32_t, int32_t);
+  void* (*new_value_array_raw)(SPVM_ENV*, int32_t, int32_t);
   void* (*new_string_raw)(SPVM_ENV* env, const char* bytes, int32_t length);
   void* (*new_pointer_raw)(SPVM_ENV*, int32_t basic_type_id, void* ptr);
   void* (*get_exception)(SPVM_ENV* env);
@@ -117,7 +117,7 @@ struct SPVM_env {
   void* (*new_double_array)(SPVM_ENV*, int32_t);
   void* (*new_object_array)(SPVM_ENV*, int32_t, int32_t);
   void* (*new_multi_array)(SPVM_ENV*, int32_t, int32_t, int32_t);
-  void* (*new_value_t_array)(SPVM_ENV*, int32_t, int32_t);
+  void* (*new_value_array)(SPVM_ENV*, int32_t, int32_t);
   void* (*new_string)(SPVM_ENV* env, const char* bytes, int32_t length);
   void* (*new_pointer)(SPVM_ENV* env, int32_t basic_type_id, void* ptr);
   int32_t (*get_package_var_id)(SPVM_ENV* env, const char* package_name, const char* package_var_name, const char* signature);
