@@ -72,7 +72,7 @@ SPVM_ENV* SPVM_RUNTIME_create_env(SPVM_RUNTIME* runtime) {
     SPVM_RUNTIME_API_new_double_array_raw,
     SPVM_RUNTIME_API_new_object_array_raw,
     SPVM_RUNTIME_API_new_multi_array_raw,
-    SPVM_RUNTIME_API_new_value_t_array_raw,
+    SPVM_RUNTIME_API_new_value_array_raw,
     SPVM_RUNTIME_API_new_string_raw,
     SPVM_RUNTIME_API_new_pointer_raw,
     SPVM_RUNTIME_API_get_exception,
@@ -106,7 +106,7 @@ SPVM_ENV* SPVM_RUNTIME_create_env(SPVM_RUNTIME* runtime) {
     SPVM_RUNTIME_API_new_double_array,
     SPVM_RUNTIME_API_new_object_array,
     SPVM_RUNTIME_API_new_multi_array,
-    SPVM_RUNTIME_API_new_value_t_array,
+    SPVM_RUNTIME_API_new_value_array,
     SPVM_RUNTIME_API_new_string,
     SPVM_RUNTIME_API_new_pointer,
     SPVM_RUNTIME_API_get_package_var_id,
