@@ -297,10 +297,10 @@ is_deeply(
   }
 }
 
-# value_t array
+# value array
 {
   {
-    my $sp_values = SPVM::new_value_t_array_len("TestCase::Point_i3", 3);
+    my $sp_values = SPVM::new_value_array_len("TestCase::Point_i3", 3);
     SPVM::set_array_element($sp_values, 1, {x => $INT_MIN, y => 1, z => 2});
     ok(TestCase::PerlAPI->spvm_set_and_get_value_t_int($sp_values));
     my $value = SPVM::get_array_element($sp_values, 1);
@@ -313,18 +313,18 @@ is_deeply(
       {x => 3, y => 4, z => 5},
       {x => 6, y => 7, z => 8},
     ];
-    my $sp_values = SPVM::new_value_t_array("TestCase::Point_i3", $values);
+    my $sp_values = SPVM::new_value_array("TestCase::Point_i3", $values);
     SPVM::set_array_elements($sp_values, $values);
-    ok(TestCase::PerlAPI->spvm_new_value_t_array_int($sp_values));
+    ok(TestCase::PerlAPI->spvm_new_value_array_int($sp_values));
     my $out_values = SPVM::get_array_elements($sp_values);
     is_deeply($out_values, $values);
   }
 
   {
     my $binary = pack('l9', ($INT_MIN, 1, 2), (3, 4, 5), (6, 7, 8));
-    my $sp_values = SPVM::new_value_t_array_len("TestCase::Point_i3", 3);
+    my $sp_values = SPVM::new_value_array_len("TestCase::Point_i3", 3);
     SPVM::set_array_elements_bin($sp_values, $binary);
-    ok(TestCase::PerlAPI->spvm_new_value_t_array_binary_int($sp_values));
+    ok(TestCase::PerlAPI->spvm_new_value_array_binary_int($sp_values));
     my $out_bin = SPVM::get_array_elements_bin($sp_values);
     is_deeply($out_bin, $binary);
   }
